# Events

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/: StackFunction.h  myEventing.hpp
src/: EventingTest.cpp  StackFnTest.cpp  pch.h
